--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,44 +4,16 @@
     "type": "split",
     "children": [
       {
-        "id": "22b55be6eaae27e1",
+        "id": "4639405cae01a7cb",
         "type": "leaf",
-        "dimension": 23.93584207279457,
-        "pinned": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": false
-          },
-          "pinned": true
-        }
-      },
-      {
-        "id": "c7e6021a47187223",
-        "type": "leaf",
-        "dimension": 50.33929673041333,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "docs/docs/About.md",
+            "file": "docs/docs/index.md",
             "mode": "source",
             "backlinks": true,
             "source": false
           }
-        }
-      },
-      {
-        "id": "7407929070a5b0ca",
-        "type": "leaf",
-        "dimension": 25.724861196792105,
-        "pinned": true,
-        "state": {
-          "type": "empty",
-          "state": {},
-          "pinned": true
         }
       }
     ],
@@ -122,7 +94,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "docs/docs/About.md"
+                "file": "docs/docs/index.md"
               }
             }
           },
@@ -150,7 +122,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/docs/About.md",
+                "file": "docs/docs/index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -168,17 +140,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "c7e6021a47187223",
+  "active": "4639405cae01a7cb",
   "lastOpenFiles": [
+    "docs/docs/reference.md",
+    "docs/docs/index.md",
+    "docs/docs/showcase.md",
+    "docs/docs/quick_start.md",
+    "docs/docs/index_cn.md",
+    "docs/docs/about.md",
+    "docs/docs/features.md",
     "README.md",
-    "100_Goals_Projects/112_🤯Mindsets/112_🤯Mindsets.md",
-    "100_Goals_Projects/111_🔁Routines/111_🔁Routines.md",
-    "100_Goals_Projects/110_🏛Pillars/110_🏛Pillars.md",
-    "100_Goals_Projects/170_💎Projects/170_💎Projects.md",
-    "100_Goals_Projects/150_🎯Outcomes/150_🎯Outcomes.md",
-    "100_Goals_Projects/130_🌟Value_Goals/130_🌟Value_Goals.md",
-    "100_Goals_Projects/100_Goals_Projects.md",
-    "900_Supporting_Files/991_Readme/Journal01_General.md",
-    "300_Journal/310_🌄Daily/2022-07-26.md"
+    "docs/docs/About.md",
+    "100_Goals_Projects/112_🤯Mindsets/112_🤯Mindsets.md"
   ]
 }
