--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -159,15 +159,15 @@
   },
   "active": "e133f5131f524283",
   "lastOpenFiles": [
+    "900_Supporting_Files/910_Templates/Periodic_Note/New-Year.md",
+    "docs/docs/quick_start.md",
+    "docs/docs/ref1_create_new_notes.md",
+    "README.md",
     "docs/docs/qs11_use_goal_management.md",
     "docs/docs/qs01_ui.md",
     "docs/docs/en_cn.md",
     "docs/docs/about.md",
     "100_Goal_Management/130_🌟Value_Goals/Have healthy life style.md",
-    "700_Periodic_Review/770_🌏Years/2022.md",
-    "900_Supporting_Files/910_Templates/Periodic_Note/New-Year.md",
-    "100_Goal_Management/100_Goal_Management.md",
-    "700_Periodic_Review/750_⌛Quarters/2022-Q3.md",
-    "700_Periodic_Review/730_📅Months/2022-08.md"
+    "700_Periodic_Review/770_🌏Years/2022.md"
   ]
 }
