--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "e133f5131f524283",
+        "id": "eb47d76bc98c952a",
         "type": "leaf",
-        "dimension": 65.44,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "500_Knowledge_Management/500_Knowledge_Management.md",
             "mode": "source",
             "backlinks": true,
             "source": false
@@ -18,17 +17,24 @@
         }
       },
       {
-        "id": "4dcb4f9160d92725",
+        "id": "f9db2f967c5f5190",
         "type": "leaf",
-        "dimension": 34.56,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "900_Supporting_Files/910_Templates/Periodic_Note/New-Year.md",
+            "file": "500_Knowledge_Management/530_⚛Atomic_Notes/530_⚛Atomic_Notes.md",
             "mode": "source",
             "backlinks": true,
             "source": false
           }
+        }
+      },
+      {
+        "id": "c52672454a7626d0",
+        "type": "leaf",
+        "state": {
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -102,9 +108,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "README.md"
-              }
+              "state": {}
             }
           },
           {
@@ -129,7 +133,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -157,17 +160,17 @@
     "direction": "horizontal",
     "width": 341
   },
-  "active": "e133f5131f524283",
+  "active": "c52672454a7626d0",
   "lastOpenFiles": [
-    "900_Supporting_Files/910_Templates/Periodic_Note/New-Year.md",
-    "docs/docs/quick_start.md",
-    "docs/docs/ref1_create_new_notes.md",
-    "README.md",
-    "docs/docs/qs11_use_goal_management.md",
-    "docs/docs/qs01_ui.md",
-    "docs/docs/en_cn.md",
-    "docs/docs/about.md",
-    "100_Goal_Management/130_🌟Value_Goals/Have healthy life style.md",
-    "700_Periodic_Review/770_🌏Years/2022.md"
+    "500_Knowledge_Management/530_⚛Atomic_Notes/New Atomic Note.md",
+    "500_Knowledge_Management/530_⚛Atomic_Notes/530_⚛Atomic_Notes.md",
+    "500_Knowledge_Management/500_Knowledge_Management.md",
+    "100_Goal_Management/100_Goal_Management.md",
+    "100_Goal_Management/109_Task_Backlog.md",
+    "300_Journal/340_🖥️Meetings/2022-07-22 Review of knowledge management system.md",
+    "🏠Dashboard.md",
+    "500_Knowledge_Management/530_⚛️Atomic_Notes/530_⚛️Atomic_Notes.md",
+    "900_Supporting_Files/910_Templates/910_Templates.md",
+    "700_Periodic_Review/700_Periodic_Review.md"
   ]
 }
